fix 2 click focused stuck theme switch

--- a/src/components/ThemeSwitch.scss
+++ b/src/components/ThemeSwitch.scss
@@ -37,6 +37,6 @@
     --size: 35px;
   }
   @media (hover: none) { 
-    --icon-fill-hover:  --icon-fill;
+    --icon-fill-hover: hsl(207, 34%, 67%);
   }
 }
